# PyO3

pyo3boilerplate_generator/: Cargo.toml
pyo3boilerplate_generator/src/: _impl.rs  lib.rs
src/class/: async.rs  macros.rs  mapping.rs  mod.rs  sequence.rs
src/objects/: module.rs
