[package]
name = "pyo3boilerplate_generator"
version = "0.1.0"
authors = ["R. Andrew Ohana <andrew.ohana@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
regex = "0.2"

[dependencies.syn]
version = "0.11"
features = ["full"]

[dependencies.lazy_static]
version = "0.2"
features = ["nightly"]
